2003/06/26 13:00 muppetman

	* GObject.xs: undo the removal of recursive package lookups, so
	gtk programs won't die on unknown style and GC subclasses

2003/06/26 17:05 pcg

        * META.yml: Add module meta-data in YAML for CPAN.
        * Glib.pm: podify and clean up docs.
        * README.api-changes: added, please add any observations
        on suboptimal API translations here.
        * GObject.xs: add gperl_object_package_from_type_recursive.
	* gperl.h: make gperl_sv_from_value arg const.
        * GType.xs: implement standard class "methods" as functions.
        Implement properties using an array, not a hash.
        * Subclass.pm: new file, still under construction.
        * t/4.t: new testcase.

2003/06/24 23:16 muppetman

	* GParamSpec.xs, Glib.xs, Makefile.PL, gperl.h, typemap: new support
	for creating GParamSpecs.

	* GObject.xs: new was broken by removal of first class, fixed;
	moved newSVGParamSpec to GParamSpec.xs; removed unused variables for
	cleaner compiles.  altered debugging prints, which are on for this
	revision (see #define NOISY near the top)

	* GType.xs: can now add properties to perl-derived types.

	* Glib.pm: Glib::Object::Base supplies some default methods.
	bumped $VERSION to 0.25 for CVS series.

2003/06/23 sometime pcg

        * GObject.xs: big change in how perl wrappers are implemented. the
        new implementation will only ever create one perl wrapper (a real
        hash) for any gobject. The combined perl+gobject will stay alive
        as long as one of the partners is alive. The only real changes are
        in gperl_new_object and in the DESTROY method.
        * gperl.h: fix some of the documentation to reflect the new model.
        * Glib.pm: remove overloading, it should no longer be necessary,
        which should give a speed boost as objects are no longer AMAGIC.
        * GObject.xs: remove unused class argument from ->new to make it
        usable as a proper base class.