@@ -20,5 +20,7 @@ README
 t/1.t
 t/2.t
 t/3.t
+t/4.t
+t/5.t
 typemap
 META.yml                                Module meta-data in YAML
